--- a/src/app.html
+++ b/src/app.html
@@ -11,13 +11,37 @@
 		<link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
 		<link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16" />
 		<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" fetchpriority="high" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin fetchpriority="high" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- Preload Inter font CSS for faster LCP -->
 		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+			rel="preload"
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+			as="style"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
+			/* Critical CSS for LCP - logo renders immediately */
+			.logo-text {
+				font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+				font-size: 28px;
+				font-weight: 800;
+				color: #0066ff;
+			}
+			.navbar {
+				position: fixed;
+				top: 0;
+				left: 0;
+				right: 0;
+				z-index: 100;
+			}
+			.logo-link {
+				text-decoration: none;
+				display: block;
+			}
 			/* Inline critical loading styles - shows BEFORE JS loads */
 			.app-loading {
 				position: fixed;
