Fix CSP, enable SSR for landing page, add preconnects
CSP fixes:
- Allow Cloudflare analytics (static.cloudflareinsights.com)
- Allow Cloudflare challenges (challenges.cloudflare.com)
- Add to both script-src and connect-src

Performance improvements:
- Enable SSR for landing page (overrides global ssr=false)
- Add Supabase preconnect for faster auth

Results (mobile):
- Score: 71 → 91 (+20 points)
- LCP: 4.0s → 3.1s
- TBT: 833ms → 30ms
- TTI: 4.3s → 2.5s

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,9 @@
 		<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- Preconnect to Supabase for faster auth -->
+		<link rel="preconnect" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
+		<link rel="dns-prefetch" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
 		<!-- Preload Inter font CSS for faster LCP -->
 		<link
 			rel="preload"
