--- a/src/app.html
+++ b/src/app.html
@@ -13,10 +13,8 @@
 		<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<!-- Preconnect to Supabase for faster auth -->
 		<link rel="preconnect" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
 		<link rel="dns-prefetch" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
-		<!-- Preload Inter font CSS for faster LCP -->
 		<link
 			rel="preload"
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
@@ -27,7 +25,7 @@
 			rel="stylesheet"
 		/>
 		<style>
-			/* Critical CSS for LCP - logo renders immediately */
+			/* Critical CSS for LCP */
 			.logo-text {
 				font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 				font-size: 28px;
@@ -45,66 +43,6 @@
 				text-decoration: none;
 				display: block;
 			}
-			/* Inline critical loading styles - shows BEFORE JS loads */
-			.app-loading {
-				position: fixed;
-				inset: 0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				flex-direction: column;
-				background: #F2F2F7;
-				z-index: 99999;
-				transition: opacity 0.3s;
-			}
-			.dark .app-loading {
-				background: #0a0a0a;
-			}
-			.app-loading.hidden {
-				opacity: 0;
-				pointer-events: none;
-			}
-			.app-loading-logo {
-				width: 60px;
-				height: 60px;
-				margin-bottom: 16px;
-			}
-			.app-loading-spinner {
-				width: 24px;
-				height: 24px;
-				border: 3px solid #E5E5EA;
-				border-top-color: #0066FF;
-				border-radius: 50%;
-				animation: spin 0.8s linear infinite;
-			}
-			.dark .app-loading-spinner {
-				border-color: #333;
-				border-top-color: #0066FF;
-			}
-			@keyframes spin {
-				to { transform: rotate(360deg); }
-			}
-			.app-loading-timeout {
-				display: none;
-				margin-top: 20px;
-				text-align: center;
-			}
-			.app-loading-timeout p {
-				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-				font-size: 14px;
-				color: #8E8E93;
-				margin-bottom: 12px;
-			}
-			.app-loading-timeout button {
-				padding: 10px 24px;
-				background: #0066FF;
-				color: white;
-				border: none;
-				border-radius: 10px;
-				font-size: 14px;
-				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-				cursor: pointer;
-			}
 		</style>
 		<script>
 			// Detect system preference and apply dark mode
@@ -116,7 +54,6 @@
 					document.documentElement.classList.add('dark');
 				}
 
-				// Listen for system preference changes
 				window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e) {
 					if (!localStorage.getItem('theme')) {
 						document.documentElement.classList.toggle('dark', e.matches);
@@ -131,7 +68,6 @@
 						registrations[i].unregister();
 					}
 				});
-				// Clear all caches
 				if ('caches' in window) {
 					caches.keys().then(function(names) {
 						for (var i = 0; i < names.length; i++) {
@@ -144,35 +80,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<!-- Loading screen - visible immediately, hidden when app loads -->
-		<div id="app-loading" class="app-loading">
-			<svg class="app-loading-logo" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<rect width="60" height="60" rx="14" fill="#0066FF"/>
-				<text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" fill="white" font-family="-apple-system, BlinkMacSystemFont, sans-serif" font-size="24" font-weight="700">blu</text>
-			</svg>
-			<div class="app-loading-spinner"></div>
-			<div id="app-loading-timeout" class="app-loading-timeout">
-				<p>Taking longer than usual...</p>
-				<button onclick="window.location.reload()">Retry</button>
-			</div>
-		</div>
-
 		<div style="display: contents">%sveltekit.body%</div>
-
-		<script>
-			// Show timeout message after 8 seconds
-			setTimeout(function() {
-				var el = document.getElementById('app-loading-timeout');
-				if (el) el.style.display = 'block';
-			}, 8000);
-
-			// Force reload after 25 seconds if still stuck
-			setTimeout(function() {
-				var el = document.getElementById('app-loading');
-				if (el && !el.classList.contains('hidden')) {
-					window.location.reload();
-				}
-			}, 25000);
-		</script>
 	</body>
 </html>
