--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="preconnect" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
 		<link rel="dns-prefetch" href="https://axsdpbzjogsfjofanqyu.supabase.co" />
+		<link rel="preconnect" href="https://auth.mrblu.com" />
+		<link rel="dns-prefetch" href="https://auth.mrblu.com" />
 		<link
 			rel="preload"
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
